--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ plugins {
     id 'jacoco'
 }
 
+
+
 jacoco {
     toolVersion = "0.8.12"
 }
@@ -21,7 +23,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.loyalty.android.HiltTestRunner"
     }
 
     buildTypes {
